Noteworthy changes in version 1.20.0 (unreleased)
-------------------------------------------------


 Release-info: https://dev.gnupg.org/Tnnnn


Noteworthy changes in version 1.19.0 (2023-03-17)
-------------------------------------------------

 * New convenience option --identify for gpgme-json.

 * New context flag "no-auto-check-trustdb".  [T6261]

 * Optionally, build QGpgME for Qt 6

 * Support component "gpgtar-name" in gpgme_get_dirinfo.  [T6342]

 * Extended gpgme_op_encrypt*, gpgme_op_encrypt_sign*, and
   gpgme_op_sign* to allow creating an encrypted and/or signed
   archive.  [T6342]

 * Extended gpgme_op_decrypt*, gpgme_op_decrypt_verify*, and gpgme_op_verify*
   to allow extracting an encrypted and/or signed archive.  [T6342]

 * cpp: Handle error when trying to sign expired keys.  [T6155]

 * cpp: Support encryption flags ThrowKeyIds, EncryptWrap, and WantAddress.
   [T6359]

 * cpp, qt: Fix building with C++11.  [T6141]

 * qt: Fix problem with expiration dates after 2038-01-19 on 32-bit systems
   when adding an existing subkey to another key.  [T6137]

 * cpp: Allow setting the curve to use when generating ECC keys
   for smart cards.  [T4429]

 * qt: Extend ListAllKeysJob to allow disabling the automatic trust database
   check when listing all keys.  [T6261]

 * qt: Allow deferred start of import jobs.  [T6323]

 * qt: Support creating and extracting signed and encrypted archives.  [T6342]

 * Interface changes relative to the 1.18.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gpgme_get_ctx_flag                EXTENDED: New flag 'no-auto-check-trustdb'.
 gpgme_set_ctx_flag                EXTENDED: New flag 'no-auto-check-trustdb'.
 GPGME_DECRYPT_ARCHIVE                      NEW.
 GPGME_ENCRYPT_ARCHIVE                      NEW.
 GPGME_SIG_MODE_ARCHIVE                     NEW.
 GPGME_VERIFY_ARCHIVE                       NEW.
 gpgme_verify_flags_t                       NEW.
 gpgme_op_verify_ext_start                  NEW.